# Morphism3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appinfo.h.in  camera_control.cpp  camera_control.h  compile_shaders.bat  container.cpp  container.h  entity.h  global_defines.h  graph.cpp  graph.h  logo_expression.txt  main.cpp  run.bat  shader.frag  shader.vert  shader_lit.frag  ui.cpp  ui.h  vk.cpp  vk.h  vk_camera.cpp  vk_camera.h  vk_constants.h  vk_datatypes.cpp  vk_datatypes.h  vk_device.cpp  vk_device.h  vk_helper.cpp  vk_helper.h  vk_renderer.cpp  vk_renderer.h  window.cpp  window.h
shader/: lit.frag  lit.vert  unlit.vert
src/: application.cpp  application.h  camera_control.cpp  camera_control.h  container.h  entity.cpp  event.cpp  event.h  expression.cpp  expression.h  global_defines.h  graph.cpp  graph.h  main.cpp  primitive.cpp  primitive.h  statistics.cpp  statistics.h  temporal.cpp  temporal.h  type.cpp  type.h  ui.cpp  ui.h  window.cpp  window.h
src/ui/: about_window.cpp  about_window.h  all.h  camera_window.cpp  camera_window.h  common.cpp  common.h  debug_window.cpp  debug_window.h  graph_window.cpp  graph_window.h  imgui.cpp  imgui.h  render_window.cpp  render_window.h  stats_window.cpp  stats_window.h  ui.cpp  ui.h
src/vk/: camera.cpp  concept.h  constants.h  datatypes.cpp  datatypes.h  device.cpp  device.h  helper.cpp  helper.h  renderer.cpp  renderer.h
